--- a/vue/src/day1/class属性绑定.html
+++ b/vue/src/day1/class属性绑定.html
@@ -16,8 +16,8 @@
     </style>
 </head>
 <body>
-    <!-- <h1 class="red italic thin"> -->
-    <!-- v-bind 作数据绑定，直接传数组 <h1 :class="['red','italic','thin','active']"> -->
+    <!-- 原生 <h1 class="red italic thin"> -->
+    <!-- v-bind 直接传数组 <h1 :class="['red','italic','thin','active']"> -->
     <!-- v-bind 中使用三元表达式 <h1 :class="['red','italic','thin',flag ? 'active' : '']"> -->
     <!-- v-bind 中使用对象 <h1 :class="{red:true,italic:true,thin:true,active:true}"> -->
     <!-- v-bind 中使用对象 对象定义到vue的data属性中 -->
